# threadlens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LIVE_TEST_0.1.0.md  LIVE_VALIDATE_STUDY.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  THREADLENS_IMPLEMENTATION_PLAN.md  docker-compose.example.yml  docker-compose.host-network.example.yml  docker-compose.lounge-agent.example.yml  docker-compose.study-both.example.yml  pyproject.toml
docs/: api.md  configuration.md  docker.md  hacs-embedded-view.md  home-assistant-integration.md  lens-alignment-status.md  lens-family.md  matter-command-diagnostics-future.md  matter-read-probes.md  mdns-networking.md  mqtt-home-assistant.md  reports.md  security.md  style-guide.md  troubleshooting.md
scripts/: generate-ui-icons.py  live_validate_study.sh  pass28_event_summary.py  run-release-checks.sh  smoke.sh
static/: .gitkeep  dashboard.css  dashboard.js  index.html
terminals/: 411477.txt  477814.txt  502542.txt  514725.txt  565563.txt  717562.txt  882140.txt  913458.txt
tests/: test_agent_api.py  test_agent_collector.py  test_api_surface.py  test_config.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_read_probes.py  test_dashboard_ui.py  test_ha_matter_enrichment.py  test_health.py  test_health_alignment.py  test_health_engine.py  test_ids.py  test_lens_mqtt.py  test_lens_report_alignment.py  test_live_test_setup.py  test_matter_collector.py  test_matter_probe_planner.py  test_matter_probe_scheduler.py  test_matter_probes.py  test_matter_ws.py  (+13 more)
(+140 files in other folders)
